feat: add export endpoint to export transaction data as XLSX and TXT files
